# spicex

./: LICENSE  Makefile.am  README.md  compile_flags.txt  configure.ac
src/: spicex.c
