AC_PREREQ([2.63])
AC_INIT([spicex], [0.1], [foo])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_CONFIG_SRCDIR([src/spicex.c])
AC_CONFIG_FILES([Makefile])

PKG_CHECK_MODULES(GTK, [gtk+-3.0 >= 3.20])
PKG_CHECK_MODULES(SPICE_GTK, [spice-client-gtk-3.0 >= 0.40])

PACKAGE_CFLAGS="$GTK_CFLAGS $SPICE_GTK_CFLAGS"
PACKAGE_LIBS="$GTK_LIBS $SPICE_GTK_LIBS"
PACKAGE_LDFLAGS="$GTK_LDFLAGS $SPICE_GTK_LDFLAGS"

AC_SUBST([PACKAGE_CFLAGS])
AC_SUBST([PACKAGE_LIBS])
AC_SUBST([PACKAGE_LDFLAGS])

AC_OUTPUT
